[tool.poetry]
name = "x3cli"
version = "0.1.0"
description = "CLI for X3"
authors = ["Timo Uelen <timouelen@godatadriven.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests-html = "^0.10.0"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
ipython = "^7.29.0"
black = "^21.11b1"
isort = "^5.10.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
