[tool.poetry]
name = "x3cli"
version = "0.1.0"
description = "CLI for X3"
authors = ["Timo Uelen <timouelen@godatadriven.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests-html = "^0.10.0"
appdirs = "^1.4.4"
pandas = "^1.3.4"
altair = "^4.1.0"
workalendar = "^16.1.0"
rich = "^10.15.1"

[tool.poetry.dev-dependencies]
ipython = "^7.31.1"
black = "^21.11b1"
isort = "^5.10.1"
pytest = "^6.2.5"
jupyterlab = "^3.2.4"
altair = "^4.1.0"
pre-commit = "^2.16.0"

[tool.poetry.scripts]
x3 = "x3cli.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
